--- a/analina/about-me.html
+++ b/analina/about-me.html
@@ -8,15 +8,17 @@
 </head>
 <body>
     <div id="content">
-        <header>
-            <a id="logo_link" href="index.html">
-                <img class="logo" src="images/cookie.png" alt="Analina Logo">
-            </a>
-            <nav>
-                <a href="index.html">Analina</a>
-                <a href="about-me.html">About Me</a>
-                <a href="contact.html">Contact</a>
-            </nav>
+        <header class="header-grid">
+            <div class="header-1">
+                <nav>
+                    <a class="a-1" href="index.html">Analina Del Vecchio</a>
+                    <a class="a-2" href="about-me.html">About Me</a>
+                    <a class="a-3" href="contact.html">Contact</a>
+                </nav>
+            </div>
+            <div class="header-2">
+                <a id="logo_link" href="index.html"><img class="logo" src="images/cookie.png" alt="Analina Logo"></a>
+            </div>   
         </header>
         <main class="main-about-me">
             <div class="main-1-element-about-me">
@@ -47,15 +49,22 @@
                 <img class="img-gatito" src="images/cookie_4.png" alt="cookie-4">
             </div>
         </main>
-        <footer>
-            <p><a href="site_plan_analina.html" target="_blank">Site Plan</a></p>
-            <div class="social">
-                <a href="https://www.facebook.com/" target="_blank"><img class="social-icon" src="images/facebook.png" alt="fb icon"></a>
-                <a href="https://github.com/" target="_blank"><img class="social-icon" src="images/github.png" alt="github icon"></a>
-                <a href="https://www.instagram.com/" target="_blank"><img class="social-icon" src="images/instagram.png" alt="instagram icon"></a>
+        <footer class="footer-grid">
+            <div class="footer-1">
+                <p><a href="site_plan_analina.html" target="_blank">Site Plan</a></p>
+            </div>
+            <div class="footer-2">
+                <div class="social">
+                    <a href="https://www.facebook.com/" target="_blank"><img class="social-icon" src="images/facebook.png" alt="fb icon"></a>
+                    <a href="https://github.com/" target="_blank"><img class="social-icon" src="images/github.png" alt="github icon"></a>
+                    <a href="https://www.instagram.com/" target="_blank"><img class="social-icon" src="images/instagram.png" alt="instagram icon"></a>
+                    <a href="mailto:yourdesignerfriends@gmail.com" target="_blank"><img class="social-icon" src="images/email.png" alt="email icon"></a>
+                </div>
             </div>
         </footer>
-        <p class="copy">&copy; 2023 - Analina Del Vecchio</p>
+        <div class="copy">
+            <p class="copy">&copy; 2023 - Analina Del Vecchio</p>
+        </div>
     </div>
 </body>
 </html>
