--- a/analina/about-me.html
+++ b/analina/about-me.html
@@ -28,7 +28,10 @@
                 <p><a href="mailto:yourdesignerfriends@gmail.com" target="_blank">Send me an email</a></p>
             </div>
             <div class="main-3-element-about-me">
-                <img class="img-about-me" src="images/anita.png" alt="anita">
+                <div class="imagen-a">
+                    <img class="img-about-me" src="images/anita.png" alt="anita">
+                    <img class="img-about-me-2" src="images/hello.png" alt="">
+                </div>
             </div>
             <div class="main-4-element-about-me">
                 <p>
