--- a/analina/about-me.html
+++ b/analina/about-me.html
@@ -28,10 +28,7 @@
                 <p><a href="mailto:yourdesignerfriends@gmail.com" target="_blank">Send me an email</a></p>
             </div>
             <div class="main-3-element-about-me">
-                <div class="imagen-a">
-                    <img class="img-about-me" src="images/anita.png" alt="anita">
-                    <img class="img-about-me-2" src="images/hello.png" alt="">
-                </div>
+                <img class="img-about-me" src="images/analina.png" alt="analina">
             </div>
             <div class="main-4-element-about-me">
                 <p>
