--- a/analina/about-me.html
+++ b/analina/about-me.html
@@ -8,16 +8,15 @@
 </head>
 <body>
     <div id="content">
-        <header class="header-grid">
-            <div class="header-1">
+        <header>
+            <div>
                 <nav>
                     <a class="a-1" href="index.html">Analina Del Vecchio</a>
                     <a class="a-2" href="about-me.html">About Me</a>
                     <a class="a-3" href="contact.html">Contact</a>
+                    <a href="index.html"><img class="logo" src="images/cookie.png" alt="Analina Logo"></a>
+
                 </nav>
-            </div>
-            <div class="header-2">
-                <a id="logo_link" href="index.html"><img class="logo" src="images/cookie.png" alt="Analina Logo"></a>
             </div>   
         </header>
         <main class="main-about-me">
@@ -26,9 +25,7 @@
             </div>
             <div class="main-4-element-about-me">
                 <p>
-                    Hello, I'm Analina (some call me cookie). I like to make connections between people, this is why I decided to study Software Development.<br> 
-                    In some way I feel that we are all connected and that there is more than one person willing to give you what you need.<br>
-                    My job is to help you find those people.
+                    Hello, I'm Analina (some call me cookie). I like to make connections between people, this is why I decided to study Software Development. In some way I feel that we are all connected and that there is more than one person willing to give you what you need. My job is to help you find those people.
                 </p>
             </div>
             <div class="main-5-element-about-me">
