--- a/analina/about-me.html
+++ b/analina/about-me.html
@@ -9,15 +9,12 @@
 <body>
     <div id="content">
         <header>
-            <div>
-                <nav>
-                    <a class="a-1" href="index.html">Analina Del Vecchio</a>
-                    <a class="a-2" href="about-me.html">About Me</a>
-                    <a class="a-3" href="contact.html">Contact</a>
-                    <a href="index.html"><img class="logo" src="images/cookie.png" alt="Analina Logo"></a>
-
-                </nav>
-            </div>   
+            <nav class="header-1">
+                <a class="a-1" href="index.html">Analina Del Vecchio</a>
+                <a class="a-2" href="about-me.html">About Me</a>
+                <a class="a-3" href="contact.html">Contact</a>
+                <a class="a-4" href="index.html"><img class="logo" src="images/cookie.png" alt="Analina Logo"></a>
+            </nav>  
         </header>
         <main class="main-about-me">
             <div class="main-3-element-about-me">
@@ -44,7 +41,7 @@
                 <img class="img-gatito" src="images/cookie_4.png" alt="cookie-4">
             </div>
         </main>
-        <footer class="footer-grid">
+        <!--<footer class="footer-grid">
             <div class="footer-1">
                 <p><a href="site_plan_analina.html" target="_blank">Site Plan</a></p>
             </div>
@@ -59,7 +56,7 @@
         </footer>
         <div class="copy">
             <p class="copy">&copy; 2023 - Analina Del Vecchio</p>
-        </div>
+        </div> -->
     </div>
 </body>
 </html>
