--- a/analina/index.html
+++ b/analina/index.html
@@ -5,20 +5,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Me</title>
     <link rel="stylesheet" href="styles/styles.css">
+    <script src="https://kit.fontawesome.com/474606cb71.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <div id="content">
-        <header class="header-grid">
-            <div class="header-1">
-                <nav>
-                    <a class="a-1" href="index.html">Analina Del Vecchio</a>
-                    <a class="a-2" href="about-me.html">About Me</a>
-                    <a class="a-3" href="contact.html">Contact</a>
-                </nav>
-            </div>
-            <div class="header-2">
-                <a id="logo_link" href="index.html"><img class="logo" src="images/cookie.png" alt="Analina Logo"></a>
-            </div>   
+        <header>
+            <div class="topnav" id="myTopnav">
+                <a href="index.html" class="active">Analina</a>
+                <a href="about-me.html">About Me</a>
+                <a href="contact.html">Contact</a>
+                <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+                  <i class="fa fa-bars"></i>
+                </a>
+              </div>
+              <script>
+                function myFunction() {
+                  var x = document.getElementById("myTopnav");
+                  if (x.className === "topnav") {
+                    x.className += " responsive";
+                  } else {
+                    x.className = "topnav";
+                  }
+                }
+            </script>   
         </header>
         <main class="main-home">
             <div class="main-1-element-home">
