--- a/analina/contact.html
+++ b/analina/contact.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Me</title>
     <link rel="stylesheet" href="styles/styles.css">
+    <!-- Load an icon library to show a hamburger menu (bars) on small screens -->
     <script src="https://kit.fontawesome.com/474606cb71.js" crossorigin="anonymous"></script>
 </head>
 <body>
