--- a/analina/contact.html
+++ b/analina/contact.html
@@ -19,6 +19,7 @@
                   <i class="fa fa-bars"></i>
                 </a>
               </div>
+              <!-- Toggle between adding and removing the "responsive" class to topnav when the user clicks on the icon -->
               <script>
                 function myFunction() {
                   var x = document.getElementById("myTopnav");
