--- a/analina/index.html
+++ b/analina/index.html
@@ -78,21 +78,19 @@
             </div>
         </main>
         <footer class="footer-grid">
-            <div class="footer-1">
+            <div class="footer1" >
+                <a href="#" class="fa fa-facebook"></a>
+                <a href="#" class="fa fa-instagram"></a>
+                <a href="#" class="fa fa-youtube"></a>
+                <a href="#" class="fa fa-linkedin"></a>
+            </div>
+            <div class="footer2">
                 <p><a href="site_plan_analina.html" target="_blank">Site Plan</a></p>
             </div>
-            <div class="footer-2">
-                <div class="social">
-                    <a href="https://www.facebook.com/" target="_blank"><img class="social-icon" src="images/facebook.png" alt="fb icon"></a>
-                    <a href="https://github.com/" target="_blank"><img class="social-icon" src="images/github.png" alt="github icon"></a>
-                    <a href="https://www.instagram.com/" target="_blank"><img class="social-icon" src="images/instagram.png" alt="instagram icon"></a>
-                    <a href="mailto:yourdesignerfriends@gmail.com" target="_blank"><img class="social-icon" src="images/email.png" alt="email icon"></a>
-                </div>
+            <div class="footer3">
+                <p>&copy; 2023 - Analina Del Vecchio</p>
             </div>
         </footer>
-        <div class="copy">
-            <p class="copy">&copy; 2023 - Analina Del Vecchio</p>
-        </div>
     </div>
 </body>
 </html>
