--- a/analina/about-me.html
+++ b/analina/about-me.html
@@ -54,6 +54,7 @@
                 <p><a href="site_plan_analina.html" target="_blank">Site Plan</a></p>
             </div>
             <div class="footer3">
+                <a href="images/cookie_4.png"></a>
                 <p>&copy; 2023 - Analina Del Vecchio</p>
             </div>
         </footer>
