--- a/analina/index.html
+++ b/analina/index.html
@@ -10,8 +10,13 @@
 <body>
     <div id="content">
         <header>
+            <div class="logo-div">
+                <p>Belive in</p>
+                <a href="index.html"><img class="logo" class="active" src="images/cookie.png" alt="cookie"></a>
+                <p>Yourself</p>
+            </div>
             <div class="topnav" id="myTopnav">
-                <a href="index.html" class="active">Analina</a>
+                <a href="index.html">Analina</a>
                 <a href="about-me.html">About Me</a>
                 <a href="contact.html">Contact</a>
                 <a href="javascript:void(0);" class="icon" onclick="myFunction()">
