--- a/analina/about-me.html
+++ b/analina/about-me.html
@@ -10,6 +10,11 @@
 <body>
     <div id="content">
         <header>
+            <div class="logo-div">
+                <p>Belive in</p>
+                <a href="index.html"><img class="logo" class="active" src="images/cookie.png" alt="cookie"></a>
+                <p>Yourself</p>
+            </div>
             <div class="topnav" id="myTopnav">
                 <a href="index.html" class="active">Analina</a>
                 <a href="about-me.html" class="active">About Me</a>
@@ -20,12 +25,12 @@
               </div>
               <script>
                 function myFunction() {
-                  var x = document.getElementById("myTopnav");
-                  if (x.className === "topnav") {
-                    x.className += " responsive";
-                  } else {
-                    x.className = "topnav";
-                  }
+                    var x = document.getElementById("myTopnav");
+                    if (x.className === "topnav") {
+                        x.className += " responsive";
+                    } else {
+                        x.className = "topnav";
+                    }
                 }
             </script>
         </header>
