--- a/analina/contact.html
+++ b/analina/contact.html
@@ -11,25 +11,29 @@
 <body>
     <div id="content">
         <header>
-            <div class="topnav" id="myTopnav">
-                <a href="index.html" class="active">Analina</a>
-                <a href="about-me.html">About Me</a>
-                <a href="contact.html">Contact</a>
-                <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-                  <i class="fa fa-bars"></i>
-                </a>
-              </div>
-              <!-- Toggle between adding and removing the "responsive" class to topnav when the user clicks on the icon -->
-              <script>
-                function myFunction() {
-                  var x = document.getElementById("myTopnav");
-                  if (x.className === "topnav") {
+          <div class="logo-div">
+            <p>Belive in</p>
+            <a href="index.html"><img class="logo" class="active" src="images/cookie.png" alt="cookie"></a>
+            <p>Yourself</p>
+          </div>
+          <div class="topnav" id="myTopnav">
+            <a href="index.html" class="active">Analina</a>
+            <a href="about-me.html" class="active">About Me</a>
+            <a href="contact.html" class="active">Contact</a>
+            <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+              <i class="fa fa-bars"></i>
+            </a>
+          </div>
+          <script>
+            function myFunction() {
+                var x = document.getElementById("myTopnav");
+                if (x.className === "topnav") {
                     x.className += " responsive";
-                  } else {
+                } else {
                     x.className = "topnav";
-                  }
                 }
-            </script>
+            }
+        </script>
         </header>
         <main class="contact-main">
             <h1>How TO - Responsive Top Navigation</h1>
