--- a/analina/contact.html
+++ b/analina/contact.html
@@ -1,44 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Me</title>
-    <link rel="stylesheet" href="styles/styles.css">
-    <!-- Load an icon library to show a hamburger menu (bars) on small screens -->
-    <script src="https://kit.fontawesome.com/474606cb71.js" crossorigin="anonymous"></script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>About Me</title>
+  <link rel="stylesheet" href="styles/styles.css">
+  <!-- Load an icon library to show a hamburger menu (bars) on small screens -->
+  <script src="https://kit.fontawesome.com/474606cb71.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <div id="content">
-        <header>
-          <div class="logo-div">
-            <p>Belive in</p>
-            <a href="index.html"><img class="logo" class="active" src="images/cookie.png" alt="cookie"></a>
-            <p>Yourself</p>
-          </div>
-          <div class="topnav" id="myTopnav">
-            <a href="index.html" class="active">Analina</a>
-            <a href="about-me.html" class="active">About Me</a>
-            <a href="contact.html" class="active">Contact</a>
-            <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-              <i class="fa fa-bars"></i>
-            </a>
-          </div>
-          <script>
-            function myFunction() {
-                var x = document.getElementById("myTopnav");
-                if (x.className === "topnav") {
-                    x.className += " responsive";
-                } else {
-                    x.className = "topnav";
-                }
+  <div id="content">
+    <header>
+      <div class="logo-div">
+        <p>Belive in</p>
+        <a href="index.html"><img class="logo" class="active" src="images/cookie.png" alt="cookie"></a>
+        <p>Yourself</p>
+      </div>
+      <div class="topnav" id="myTopnav">
+        <a href="index.html" class="active">Analina</a>
+        <a href="about-me.html" class="active">About Me</a>
+        <a href="contact.html" class="active">Contact</a>
+        <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+          <i class="fa fa-bars"></i>
+        </a>
+      </div>
+      <script>
+        function myFunction() {
+          var x = document.getElementById("myTopnav");
+            if (x.className === "topnav") {
+              x.className += " responsive";
+            } else {
+              x.className = "topnav";
             }
-        </script>
-        </header>
-        <main class="contact-main">
-            <h1>How TO - Responsive Top Navigation</h1>
-            <a href="https://www.w3schools.com/howto/howto_js_topnav_responsive.asp" target="_blank">See More</a>
-        </main>
-    </div>
+          }
+      </script>
+    </header>
+    <main class="contact-main">
+      <h1>How TO - Responsive Top Navigation</h1>
+      <a href="https://www.w3schools.com/howto/howto_js_topnav_responsive.asp" target="_blank">See More</a>
+    </main>
+    <footer class="footer-grid">
+      <div class="footer1" >
+        <a href="#" class="fa fa-facebook"></a>
+        <a href="#" class="fa fa-instagram"></a>
+        <a href="#" class="fa fa-youtube"></a>
+        <a href="#" class="fa fa-linkedin"></a>
+      </div>
+      <div class="footer2">
+        <p><a href="site_plan_analina.html" target="_blank">Site Plan</a></p>
+      </div>
+      <div class="footer3">
+        <a href="images/cookie_4.png"></a>
+          <p>&copy; 2023 - Analina Del Vecchio</p>
+      </div>
+    </footer>
+  </div>
 </body>
 </html>
