--- a/analina/about-me.html
+++ b/analina/about-me.html
@@ -17,8 +17,8 @@
             </div>
             <div class="topnav" id="myTopnav">
                 <a href="index.html" class="active">Analina</a>
-                <a href="about-me.html" class="active">About Me</a>
-                <a href="contact.html" class="active">Contact</a>
+                <a href="about-me.html">About Me</a>
+                <a href="contact.html">Contact</a>
                 <a href="javascript:void(0);" class="icon" onclick="myFunction()">
                   <i class="fa fa-bars"></i>
                 </a>
