--- a/analina/contact.html
+++ b/analina/contact.html
@@ -13,7 +13,7 @@
     <header>
       <div class="logo-div">
         <p>Belive in</p>
-        <a href="index.html"><img class="logo" class="active" src="images/cookie.png" alt="cookie"></a>
+        <a href="index.html"><img class="logo" src="images/cookie.png" alt="cookie"></a>
         <p>Yourself</p>
       </div>
       <div class="topnav" id="myTopnav">
