--- a/analina/contact.html
+++ b/analina/contact.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>About Me</title>
+  <title>Contact</title>
   <link rel="stylesheet" href="styles/styles.css">
   <!-- Load an icon library to show a hamburger menu (bars) on small screens -->
   <script src="https://kit.fontawesome.com/474606cb71.js" crossorigin="anonymous"></script>
