--- a/analina/site_plan_analina.html
+++ b/analina/site_plan_analina.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <title>Analina Site Plan</title>
   <link type="text/css" rel="stylesheet" href="styles/style_site_plan_analina.css">
+  <script src="https://kit.fontawesome.com/474606cb71.js" crossorigin="anonymous"></script>
 </head>
 <body>
   <header>
@@ -93,100 +94,101 @@
 <!-- Linea Divisoria -->
     <hr>
     <section>
-    <h2>
-      Site Map
-    </h2>
-    <div class="sitemap">
-      <div class="sm-home">
-        Home Page
+      <h2>
+        Site Map
+      </h2>
+      <div class="sitemap">
+        <div class="sm-home">
+          Home Page
+        </div>
+        <div class="sm-page2">
+          About me <!-- change this -->
+        </div>
+        <div class="sm-page3">
+          Contact <!-- change this -->
+        </div>
+        <div class="top">
+          &nbsp;
+        </div>
+        <div class="left">
+          &nbsp;
+        </div>
+        <div class="right">
+          &nbsp;
+        </div>
       </div>
-      <div class="sm-page2">
-        About me <!-- change this -->
-      </div>
-      <div class="sm-page3">
-        Contact <!-- change this -->
-      </div>
-      <div class="top">
-        &nbsp;
-      </div>
-      <div class="left">
-        &nbsp;
-      </div>
-      <div class="right">
-        &nbsp;
-      </div>
-    </div>
     </section>
 <!-- Linea Divisoria -->
     <hr>
     <section>
-    <h2>
-      Content
-    </h2>
-    <h3>Home Page</h3>
-    <h2>Software Development BS (Student)</h2>
-    <h3>Some projects</h3>
-    <h3>Doma Bohemian Furniture</h3>
-    <p>
-      Year of Creation: 2020<br>
-      Project description: Local online store based in USA where furniture and home decoration products are sold.
-    </p>
-    <h3>My Hair by Sandra</h3>   
-    <p>
-    Year of creation: 2021<br>
-    Project description: Beauty salon based in Panama where hair products and professional services are sold.
-    </p>
-    <h3>Your Designer Friends</h3>
-    <p>
-    Year of creation: 2021<br>
-    Project description: Company dedicated to providing brand design, tutoring and software development services.
-    </p>
-    <h3>Images for the Home page</h3>
-      <img src="images/hello.png" alt="hello"><br>
-      <img class="img-projects" src="images/doma.png" alt="doma bohemian furniture"><br>
-      <img class="img-projects" src="images/my-hair.png" alt="my hair by sandra"><br>
-      <img class="img-projects" src="images/your-design.png" alt="your designer friends">
-    <h2>About Me Page</h2>
-    <p>
-      Hello, I'm Analina (some call me cookie). I like to make connections between people, this is why I decided to study Software Development.<br> 
-      In some way I feel that we are all connected and that there is more than one person willing to give you what you need.<br>
-      My job is to help you find those people.<br><br>
-      Here's a little about my work experience and skills:<br><br>
-      When I graduated from high school I was willing to study Medicine following that part of me that is inclined to help others, however, I realized that medicine took a lot of time away from my family. My mother is a widow and, being the eldest daughter, I felt the obligation to support her with my little brothers, so I changed schools and began my degree in Public Accounting. There I learned a very important lesson: order facilitates transparency and numbers do not lie. One of my favorite subjects was economics. My teacher was a little crazy man but he was a genius. I learned that an economist is capable of predicting the future and that helped me to be more careful and keep in mind that every decision will have a consequence. During this stage, my mother and I managed to have our own business, a beauty business. I fulfilled the responsibilities of manager, accounting bookkeeping, among others. In 2008, something happened that marked my life forever. I left university and also the family business. At that moment I learned that in life there are ups and downs. I spent a couple of years working as a salesperson in stores which taught me how to deal with the public, be friendly and develop humility. In 2016 I worked as a manager in a designer store, where I learned a lot about design, artistic composition and took some marketing and visual merchandising design courses. Right at that moment it was a time of great crisis in my native country Venezuela, inflation reached 1,370,000% according to the estimates of the International Monetary Fund (IMF), it is something difficult to believe but it happened and I lived it. I learned to work under a lot of pressure, sometimes I had to change product prices 3 or more times a day. I remember it when I went to the movies with my mother and saw how the popcorn changed prices while we were in line. I am a person who, like anyone else, feels love for the place where we were born, but I learned to have resilience and accept changes, also that the strength of Faith is focused on our actions and the confidence of being guided by God. In 2019, with many tears in my eyes, I left my country and went to Panama. I arrived with all my capital, $20, and a great desire to improve the situation in my life. I don't remember how many resumes I handed in the first week. I didn't have legal status. So it was difficult to find a job. I remember that I read an advertisement in English. At this time I learned a very important lesson, he who perseveres wins, I managed to have this job as a domestic worker for a company that develops government renewable energy projects. I had my own room with a bathroom, a beautiful view of the sea, all my meals covered, and a decent salary to help my mother and little brother in Venezuela. I still feel very grateful to my Heavenly Father for that job, my bosses were like my family. During the pandemic, while many people lost their jobs, I was blessed to have support for my family. I also learned culinary art and many delicious Chinese recipes. During my free time at work I started studying Cpanel, Wordpress, Social media advertising, Application programming interface (API) key and Web Programming on my own. I created some ecommerce and configured payment gateways and I also met the love of my life who today is my beloved husband. Sometimes life takes us down unknown paths often filled with regret, but we should never doubt that we are on the right path. I am currently improving my programming knowledge studying at BYU Idaho, thanks to a program called BYU Pathway Worldwide that is a miracle in my life. If you are looking for someone who will give you 100% at work, contact me, I will be happy to help. Let the connections begin!
-    </p>
-    <h3>Images for the About Me Page</h3>
-      <img src="images/anita.png" alt="anita"><br>
-      <img src="images/cookie_4.png" alt="cookie 4">
-    <h2>Contact Page</h2>
-    <h3>Contact Form</h3>
-    <p>
-      Full Name* First Name / Last Name <br>
-      E-mail* <br>
-      Message* <br>
-      SUBMIT <br><br> 
-      Inspirational Phrase <br><br>
-      “Every experience God gives us, every person He puts in our lives, is the perfect preparation for the future only He can see.”<br><br>
-      Follow me on my social networks
-    </p>
-    <h3>Images for the Contact Page</h3>
-      <img src="images/instagram.png" alt="instagram"><br>
-      <img src="images/facebook.png" alt="facebook"><br>
-      <img src="images/github.png" alt="github"><br>
-      <img src="images/email.png" alt="email">
-    </section>
+      <h2>
+        Content
+      </h2>
+      <h3>Home Page</h3>
+      <h2>Software Development BS (Student)</h2>
+      <h3>Some projects</h3>
+      <h3>Doma Bohemian Furniture</h3>
+      <p>
+        Year of Creation: 2020<br>
+        Project description: Local online store based in USA where furniture and home decoration products are sold.
+      </p>
+      <h3>My Hair by Sandra</h3>   
+      <p>
+      Year of creation: 2021<br>
+      Project description: Beauty salon based in Panama where hair products and professional services are sold.
+      </p>
+      <h3>Your Designer Friends</h3>
+      <p>
+      Year of creation: 2021<br>
+      Project description: Company dedicated to providing brand design, tutoring and software development services.
+      </p>
+      <h3>Images for the Home page</h3>
+        <img src="images/hello.png" alt="hello"><br>
+        <img class="img-projects" src="images/doma.png" alt="doma bohemian furniture"><br>
+        <img class="img-projects" src="images/my-hair.png" alt="my hair by sandra"><br>
+        <img class="img-projects" src="images/your-design.png" alt="your designer friends">
+      <h2>About Me Page</h2>
+      <p>
+        Hello, I'm Analina (some call me cookie). I like to make connections between people, this is why I decided to study Software Development.<br> 
+        In some way I feel that we are all connected and that there is more than one person willing to give you what you need.<br>
+        My job is to help you find those people.<br><br>
+        Here's a little about my work experience and skills:<br><br>
+        When I graduated from high school I was willing to study Medicine following that part of me that is inclined to help others, however, I realized that medicine took a lot of time away from my family. My mother is a widow and, being the eldest daughter, I felt the obligation to support her with my little brothers, so I changed schools and began my degree in Public Accounting. There I learned a very important lesson: order facilitates transparency and numbers do not lie. One of my favorite subjects was economics. My teacher was a little crazy man but he was a genius. I learned that an economist is capable of predicting the future and that helped me to be more careful and keep in mind that every decision will have a consequence. During this stage, my mother and I managed to have our own business, a beauty business. I fulfilled the responsibilities of manager, accounting bookkeeping, among others. In 2008, something happened that marked my life forever. I left university and also the family business. At that moment I learned that in life there are ups and downs. I spent a couple of years working as a salesperson in stores which taught me how to deal with the public, be friendly and develop humility. In 2016 I worked as a manager in a designer store, where I learned a lot about design, artistic composition and took some marketing and visual merchandising design courses. Right at that moment it was a time of great crisis in my native country Venezuela, inflation reached 1,370,000% according to the estimates of the International Monetary Fund (IMF), it is something difficult to believe but it happened and I lived it. I learned to work under a lot of pressure, sometimes I had to change product prices 3 or more times a day. I remember it when I went to the movies with my mother and saw how the popcorn changed prices while we were in line. I am a person who, like anyone else, feels love for the place where we were born, but I learned to have resilience and accept changes, also that the strength of Faith is focused on our actions and the confidence of being guided by God. In 2019, with many tears in my eyes, I left my country and went to Panama. I arrived with all my capital, $20, and a great desire to improve the situation in my life. I don't remember how many resumes I handed in the first week. I didn't have legal status. So it was difficult to find a job. I remember that I read an advertisement in English. At this time I learned a very important lesson, he who perseveres wins, I managed to have this job as a domestic worker for a company that develops government renewable energy projects. I had my own room with a bathroom, a beautiful view of the sea, all my meals covered, and a decent salary to help my mother and little brother in Venezuela. I still feel very grateful to my Heavenly Father for that job, my bosses were like my family. During the pandemic, while many people lost their jobs, I was blessed to have support for my family. I also learned culinary art and many delicious Chinese recipes. During my free time at work I started studying Cpanel, Wordpress, Social media advertising, Application programming interface (API) key and Web Programming on my own. I created some ecommerce and configured payment gateways and I also met the love of my life who today is my beloved husband. Sometimes life takes us down unknown paths often filled with regret, but we should never doubt that we are on the right path. I am currently improving my programming knowledge studying at BYU Idaho, thanks to a program called BYU Pathway Worldwide that is a miracle in my life. If you are looking for someone who will give you 100% at work, contact me, I will be happy to help. Let the connections begin!
+      </p>
+      <h3>Image for the About Me Page</h3>
+        <img src="images/analina.png" alt="analina"><br>
+      <h2>Contact Page</h2>
+      <h3>Contact Form</h3>
+      <p>
+        Full Name* First Name / Last Name <br>
+        E-mail* <br>
+        Message* <br>
+        SUBMIT <br><br> 
+        Inspirational Phrase <br><br>
+        “Every experience God gives us, every person He puts in our lives, is the perfect preparation for the future only He can see.”<br><br>
+        Follow me on my social networks
+      </p>
+      <h3>Image for the Contact Page</h3>
+        <img src="images/cookie_4.png" alt="cookie 4">
+      <h3>Social icons</h3>
+        <a href="#" class="fa fa-facebook"></a>
+        <a href="#" class="fa fa-instagram"></a>
+        <a href="#" class="fa fa-youtube"></a>
+        <a href="#" class="fa fa-linkedin"></a>
+      </section>
 <!-- Linea Divisoria -->
-    <hr>
-    <section>
-    <h2>
-      Wireframes
-    </h2>
-    <h3>Home Page</h3>
-    <img src="images/home-wireframe.png" alt="home page wireframe">
-    <h3>About Me Page</h3>
-    <img src="images/about-wireframe.png" alt="about page wireframe">
-    <h3>Contact Page</h3>
-    <img src="images/contact-wireframe.png" alt="contact page wireframe">
-    </section>
+      <hr>
+      <section>
+        <h2>
+          Wireframes
+        </h2>
+        <h3>Home Page</h3>
+        <img src="images/home-wireframe.png" alt="home page wireframe">
+        <h3>About Me Page</h3>
+        <img src="images/about-wireframe.png" alt="about page wireframe">
+        <h3>Contact Page</h3>
+        <img src="images/contact-wireframe.png" alt="contact page wireframe">
+      </section>
     </main>
   </body>
 </html>
