--- a/analina/contact.html
+++ b/analina/contact.html
@@ -35,9 +35,42 @@
           }
       </script>
     </header>
-    <main class="contact-main">
-      <h1>How TO - Responsive Top Navigation</h1>
-      <a href="https://www.w3schools.com/howto/howto_js_topnav_responsive.asp" target="_blank">See More</a>
+    <main>
+      <form action="/my-handling-form-page" method="post">
+        <ul>
+          <li>
+            <label for="name">Name:</label>
+            <input type="text" id="name" name="user_name">
+          </li>
+          <li>
+            <label for="mail">E-mail:</label>
+            <input type="email" id="mail" name="user_mail">
+          </li>
+          <li>
+            <label for="msg">Message:</label>
+            <textarea id="msg" name="user_message"></textarea>
+          </li>
+          <li class="button">
+             <button type="submit">Send your message</button>
+          </li>
+        </ul> 
+      </form>
+      <div id="feedback"></div>
+      <script>
+        // get the feedback div element so we can do something with it.
+        const feedbackElement = document.getElementById('feedback');
+        // get the form so we can read what was entered in it.
+        const formElement = document.forms[0];
+        // add a 'listener' to wait for a submission of our form. When that happens run the code below.
+        formElement.addEventListener('submit', function(e) {
+          // stop the form from doing the default action.
+          e.preventDefault();
+          // set the contents of our feedback element to a message letting the user know the form was submitted successfully. Notice that we pull the name that was entered in the form to personalize the message!
+          feedbackElement.innerHTML = 'Hello '+ formElement.user_name.value +'!Thank you for your message 🙂. We will get back with you as soon as possible!';
+          // make the feedback element visible.
+          feedbackElement.style.display = "block";
+        });
+      </script>
     </main>
     <footer class="footer-grid">
       <div class="footer1" >
