--- a/analina/contact.html
+++ b/analina/contact.html
@@ -36,7 +36,7 @@
       </script>
     </header>
     <main class="contact-grid">
-      <div class="contatc-element-1">
+      <div class="contact-element-1">
         <form action="/my-handling-form-page" method="post">
           <ul>
             <li>
