--- a/analina/contact.html
+++ b/analina/contact.html
@@ -37,6 +37,9 @@
     </header>
     <main class="contact-grid">
       <div class="contact-element-1">
+        <h4>“Every experience God gives us, every person He puts in our lives, is the perfect preparation for the future only He can see.”</h4>
+      </div>
+      <div class="contact-element-2">
         <form action="/my-handling-form-page" method="post">
           <ul>
             <li>
@@ -73,9 +76,12 @@
           });
         </script>
       </div>
+      <div class="contact-element-3">
+          <img class="gatito" src="images/cookie_4.png" alt="gatito">
+      </div>
     </main>
     <footer class="footer-grid">
-      <div class="footer1" >
+      <div class="footer1">
         <a href="#" class="fa fa-facebook"></a>
         <a href="#" class="fa fa-instagram"></a>
         <a href="#" class="fa fa-youtube"></a>
