--- a/analina/contact.html
+++ b/analina/contact.html
@@ -77,7 +77,7 @@
         </script>
       </div>
       <div class="contact-element-3">
-          <img class="gatito" src="images/cookie_4.png" alt="gatito">
+          <img class="gatito" src="images/carta.png" alt="gatito">
       </div>
     </main>
     <footer class="footer-grid">
