--- a/analina/site_plan_analina.html
+++ b/analina/site_plan_analina.html
@@ -168,7 +168,7 @@
         “Every experience God gives us, every person He puts in our lives, is the perfect preparation for the future only He can see.”<br><br>
       </p>
       <h3>Image for the Contact Page</h3>
-        <img src="images/cookie_4.png" alt="cookie 4">
+        <img src="images/carta.png" alt="carta">
       <h3>Social icons</h3>
         <a href="#" class="fa fa-facebook"></a>
         <a href="#" class="fa fa-instagram"></a>
