--- a/analina/contact.html
+++ b/analina/contact.html
@@ -40,41 +40,47 @@
         <h4>“Every experience God gives us, every person He puts in our lives, is the perfect preparation for the future only He can see.”</h4>
       </div>
       <div class="contact-element-2">
-        <form action="/my-handling-form-page" method="post">
-          <ul>
-            <li>
-              <label for="name">Name:</label>
-              <input type="text" id="name" name="user_name">
-            </li>
-            <li>
-              <label for="mail">E-mail:</label>
-              <input type="email" id="mail" name="user_mail">
-            </li>
-            <li>
-              <label for="msg">Message:</label>
-              <textarea id="msg" name="user_message"></textarea>
-            </li>
-            <li class="button">
-              <button type="submit">Send your message</button>
-            </li>
-          </ul> 
+        <form action="/action_page.php">
+          <div class="row">
+            <div class="col-25">
+              <label for="fname">First Name</label>
+            </div>
+            <div class="col-75">
+              <input type="text" id="fname" name="firstname" placeholder="Your name..">
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-25">
+              <label for="lname">Last Name</label>
+            </div>
+            <div class="col-75">
+              <input type="text" id="lname" name="lastname" placeholder="Your last name..">
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-25">
+              <label for="country">Country</label>
+            </div>
+            <div class="col-75">
+              <select id="country" name="country">
+                <option value="australia">Australia</option>
+                <option value="canada">Canada</option>
+                <option value="usa">USA</option>
+              </select>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-25">
+              <label for="subject">Subject</label>
+            </div>
+            <div class="col-75">
+              <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea>
+            </div>
+          </div>
+          <div class="row">
+            <input type="submit" value="Submit">
+          </div>
         </form>
-        <div id="feedback"></div>
-        <script>
-          // get the feedback div element so we can do something with it.
-          const feedbackElement = document.getElementById('feedback');
-          // get the form so we can read what was entered in it.
-          const formElement = document.forms[0];
-          // add a 'listener' to wait for a submission of our form. When that happens run the code below.
-          formElement.addEventListener('submit', function(e) {
-            // stop the form from doing the default action.
-            e.preventDefault();
-            // set the contents of our feedback element to a message letting the user know the form was submitted successfully. Notice that we pull the name that was entered in the form to personalize the message!
-            feedbackElement.innerHTML = 'Hello '+ formElement.user_name.value +'!Thank you for your message 🙂. We will get back with you as soon as possible!';
-            // make the feedback element visible.
-            feedbackElement.style.display = "block";
-          });
-        </script>
       </div>
       <div class="contact-element-3">
           <img class="carta" src="images/carta.png" alt="carta">
