--- a/analina/contact.html
+++ b/analina/contact.html
@@ -43,18 +43,10 @@
         <form action="/my-handling-form-page" method="post">
           <div class="row">
             <div class="col-25">
-              <label for="fname">First Name</label>
+              <label for="name">Name:</label>
             </div>
             <div class="col-75">
-              <input type="text" id="fname" name="firstname" placeholder="Your name..">
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-25">
-              <label for="lname">Last Name</label>
-            </div>
-            <div class="col-75">
-              <input type="text" id="lname" name="lastname" placeholder="Your last name..">
+              <input type="text" id="name" name="user_name">
             </div>
           </div>
           <div class="row">
@@ -67,19 +59,7 @@
           </div>
           <div class="row">
             <div class="col-25">
-              <label for="country">Country</label>
-            </div>
-            <div class="col-75">
-              <select id="country" name="country">
-                <option value="australia">Australia</option>
-                <option value="canada">Canada</option>
-                <option value="usa">USA</option>
-              </select>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-25">
-              <label for="subject">Subject</label>
+              <label for="msg">Message:</label>
             </div>
             <div class="col-75">
               <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea>
