--- a/analina/contact.html
+++ b/analina/contact.html
@@ -46,7 +46,7 @@
               <label for="name">Name:</label>
             </div>
             <div class="col-75">
-              <input type="text" id="name" name="user_name">
+              <input type="text" id="name" name="user_name" placeholder="Your name..">
             </div>
           </div>
           <div class="row">
