--- a/analina/contact.html
+++ b/analina/contact.html
@@ -59,7 +59,7 @@
           </div>
           <div class="row">
             <div class="col-25">
-              <label for="msg">Message:</label>
+              <label for="subject">Subject</label>
             </div>
             <div class="col-75">
               <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea>
