--- a/analina/contact.html
+++ b/analina/contact.html
@@ -37,7 +37,7 @@
     </header>
     <main class="contact-grid">
       <div class="contact-element-1">
-        <h4>“Every experience God gives us, every person He puts in our lives, is the perfect preparation for the future only He can see.”</h4>
+        <h4>"Every experience God gives us, every person He puts in our lives Is the perfect preparation for a future that only He can see." - Corrie ten Boom</h4>
       </div>
       <div class="contact-element-2">
         <form action="/my-handling-form-page" method="post">
