--- a/analina/site_plan_analina.html
+++ b/analina/site_plan_analina.html
@@ -165,7 +165,7 @@
         Message* <br>
         SUBMIT <br><br> 
         Inspirational Phrase <br><br>
-        “Every experience God gives us, every person He puts in our lives, is the perfect preparation for the future only He can see.”<br><br>
+        "Every experience God gives us, every person He puts in our lives Is the perfect preparation for a future that only He can see." - Corrie ten Boom<br><br>
       </p>
       <h3>Image for the Contact Page</h3>
         <img src="images/carta.png" alt="carta">
