--- a/analina/about-me.html
+++ b/analina/about-me.html
@@ -53,6 +53,9 @@
                     One of my favorite classes was <b>economics</b>. My teacher was a little crazy but he was a genius. I learned that an economist is capable of predicting the future and that helped me be more <b>careful</b> and keep in mind that every decision I make will have a consequence.<br></br>
                     After a year my mother and I managed to have our own <b>family business</b>. I fulfilled the responsibilities of <b>manager and accounting bookkeeping.</b><br></br>
                     In 2008 something happened that marked my life forever. I left university and also the family business. At that moment I learned that <b>in life there are ups and downs</b>. I spent a couple of years working as a <b>salesperson</b> in stores which taught me <b>how to deal with the public, be friendly and develop humility.</b><br></br>
+                    In 2016 I worked as a <b>manager</b> in a design store, where <b>I learned a lot about graphic design, fashion design, artistic composition and took some marketing and visual merchandising courses</b>.<br></br>
+                    Right at that moment it was a time of great crisis in my native country Venezuela, inflation reached 1,370,000% according to the estimates of the International Monetary Fund (IMF), it is something difficult to believe but it happened and I lived it. <b>I learned to work under a lot of pressure</b>, every week I had to change product prices 3 or more times a day. I remember going to the movies with my mother and watching the price of popcorn change while we stood in line.<br></br>
+                    
 
                 </p>
             </div>
