--- a/analina/about-me.html
+++ b/analina/about-me.html
@@ -59,6 +59,8 @@
                     I don't remember how many resumes I handed out the first week. (I had no legal status, so it was difficult to find work.) I remember reading an ad in English and knowing very little English. During this time <b>I learned a very important lesson, he who perseveres wins</b>. I managed to get this job as a <b>domestic worker</b> for a company that develops government renewable energy projects. I had my own room with a bathroom, a beautiful ocean view, all my meals covered, and a decent salary to help my mother and little brother in Venezuela.<br></br>
                     I still feel very grateful to my Heavenly Father for that job, my bosses were like my family. During the pandemic, although many people lost their jobs, I was lucky to have a job to help my mother and siblings. <b>I also learned culinary art and many delicious Chinese recipes</b>.<br></br>
                     During my free time at work <b>I started studying Cpanel, Wordpress, Social media advertising, Application programming interface (API) key and Web Programming on my own. I created some ecommerce and configured payment gateways</b>.<br></br>
+                    During this time I met the love of my life who today is my beloved husband. Sometimes life takes us down unknown paths and many times full of challenges, but we should never doubt that we are on the right path.<br></br>
+                    <b>I am currently improving my programming knowledge studying at BYU Idaho</b>, thanks to a program called BYU Pathway Worldwide that is a miracle in my life. If you are looking for someone who will give you 100% at work, contact me, I will be happy to help. Let the connections begin!</p>
                 </p>
             </div>
         </main>
