--- a/analina/index.html
+++ b/analina/index.html
@@ -11,7 +11,7 @@
     <div id="content">
         <header>
             <div class="logo-div">
-                <p>Belive in</p>
+                <p>Believe in</p>
                 <a href="index.html"><img class="logo" src="images/cookie.png" alt="cookie"></a>
                 <p>Yourself</p>
             </div>
