--- a/analina/site_plan_analina.html
+++ b/analina/site_plan_analina.html
@@ -29,6 +29,7 @@
       <h3>Website Logo</h3>
     </section>
     <img src="images/cookie.png" alt="Logo image">
+    <h2>Believe in Yourself</h2>
 <!-- Linea Divisoria -->
     <hr>
     <section>
