--- a/analina/about-me.html
+++ b/analina/about-me.html
@@ -49,7 +49,7 @@
                     I realized I know that studying Medicine took up a lot of my time and took me away from my family. Especially my mother, she was a widow and she needed my support to take care of my little brothers. Due to this situation I changed schools and began a career in <b>Public Accounting</b>.<br><br>
                     Studying public accounting helped me develop useful skills for my personal and professional life, two of the most important what they are:<br><br>
                     1. Working in an orderly and organized manner facilitates transparency.<br><br>
-                    2. Numbers don't lie.<br></br>
+                    2. Numbers don't lie.<br><br>
                     One of my favorite classes was <b>economics</b>. My teacher was a little crazy but he was a genius. I learned that an economist is capable of predicting the future and that helped me be more <b>careful</b> and keep in mind that every decision I make will have a consequence.<br><br>
                     After a year my mother and I managed to have our own <b>family business</b>. I fulfilled the responsibilities of <b>manager and accounting bookkeeping.</b><br><br>
                     In 2008 something happened that marked my life forever. I left university and also the family business. At that moment I learned that <b>in life there are ups and downs</b>. I spent a couple of years working as a <b>salesperson</b> in stores which taught me <b>how to deal with the public, be friendly and develop humility.</b><br><br>
